# DesktopPet

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
.cargo/: audit.toml
.codex/: verify.commands
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  git-hygiene.yml  lockfile-rationale.yml  perf-enforced.yml  perf-foundation.yml  release.yml  security.yml
.perf-baselines/: build-time.json  bundle.json
docs/: PORTFOLIO-DISPOSITION.md  codex-docs-drift-checklist.md  codex-feature-maturity-policy.md  execution-contract.md  macos-signing-handoff.md  release-candidate-status.md  release-runbook.md  security-gates.md
scripts/: prepare-husky.sh  tauri-build-checked.sh  tauri-rust-test.sh  tauri-smoke.sh  verify-tauri-strict-temp.sh  verify.sh
scripts/perf/: compare-metric.mjs  lhci.sh  measure-build-time.mjs  update-baselines.sh
scripts/release/: macos-signing-preflight.sh  package-updater-assets.sh  validate-tauri-artifacts.sh
scripts/security/: run-security-scans.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  models.rs
src/components/panel/: ControlPanel.tsx  SettingsPanel.tsx
src/components/panel/__tests__/: SettingsPanel.test.tsx
src/components/pet/: PetOverlay.tsx
src/hooks/: usePetEvents.ts  usePomodoro.ts
src/hooks/__tests__/: usePetEvents.test.ts
src/lib/: chill.ts  clipboard.ts  petWindow.ts  safeStorage.ts
src/lib/__tests__/: clipboard.test.ts  petWindow.test.ts
src/test/: setup.ts
